syntax = "proto3";

package product;

option java_multiple_files = true;
option java_package = "jp.inaba.grpc.product";

service GetProduct {
  rpc handle (GetProductRequest) returns (GetProductResponse);
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  string name = 1;
  string description = 2;
  string imageUrl = 3;
  int32 price = 4;
  int32 quantity = 5;
}